syntax = "proto3";

// package IMsystem;

option go_package="/IMsystem;IMsystem";

service IMService {
    rpc SendTo(SendToReq) returns (SendToResp);
    rpc Broadcast(BroadcastReq) returns (BroadcastResp);
    rpc ChangeName(ChangeNameReq) returns (ChangeNameResp);
    // rpc SendTo() returns ();
    // rpc SendTo() returns ();
}

message SendToReq {
    string name = 1;
    string toName = 2;
    string message = 3;
}

message SendToResp {
    bool ok = 1;
    string errMessage = 2;
}

message BroadcastReq {
    string name = 1;
    string message = 2;
}

message BroadcastResp {
    bool ok = 1;
    string errMessage = 2;
}

message ChangeNameReq {
    string name = 1;
    string newName = 2;
}

message ChangeNameResp {
    bool ok = 1;
    string errMessage = 2;
}
